Fixed styling for navbar on smaller screens.

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -35,6 +35,7 @@ a:hover {
   letter-spacing: 5px;
   font-size: 20px;
   font-weight: 600;
+  margin-left: 20px;
 }
 
 .addtocart {
@@ -366,4 +367,136 @@ a:hover {
 
 .shadow-bot {
   box-shadow: 0 3px 2px -2px var(--brand-color);
+}
+
+/* Navbar Styles */
+.navbar-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  font-size: 17px;
+}
+
+.navbar-li {
+  margin: 0;
+}
+
+.navbar-item {
+  color: inherit;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.hamburger-logo {
+  position: absolute;
+  right: calc(50% - 68px);
+}
+
+/* Hamburger Styles */
+.hamburger-toggle {
+  padding: 0.5em;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  z-index: 9999;
+  display: block;
+}
+/* Three lines that make the hamburger (hamburger, before, after) */
+.hamburger {
+  display: block;
+  position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+  background: black;
+  width: 2em;
+  height: 3px;
+  border-radius: 1em;
+  transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+}
+
+.hamburger::before {
+  top: 6px;
+}
+
+.hamburger::after {
+  bottom: 6px;
+}
+/* Animation setup for the three lines turning into the "X" */
+.hamburger-open .hamburger {
+  transform: rotate(0.625turn);
+}
+
+.hamburger-open .hamburger::after {
+  opacity: 0;
+}
+
+.hamburger-open .hamburger::before {
+  transform: rotate(90deg) translateX(-6px);
+}
+
+.hamburger-open .hamburger-toggle {
+  position: fixed;
+}
+/* Deals with the list, its size, and where it enters the screen */
+.hamburger-open .hamburger-nav {
+  transform: translateY(0%);
+}
+
+.hamburger-nav {
+  position: fixed;
+  background: black;
+  color: white;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  transform: translateY(-100%);
+  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
+}
+
+.hamburger-list {
+  list-style: none;
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  background: grey;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.hamburger-item {
+  color: inherit;
+  font-weight: bold;
+  font-size: x-large;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.nav-p {
+  margin: 0 0 0 auto !important;
+}
+
+@media (min-width: 768px) {
+  .hamburger-container {
+    display: none;
+  }
 }
